--- a/third.html
+++ b/third.html
@@ -51,7 +51,7 @@
             <br>
             <h2>Älä sijoita mitä et voi menettää</h2><br>
             Osta dippiä<br>
-            Riko sääntöjä</h2>
+            Riko sääntöjä<br>
             <br>
             <h1><b>Pidä huolta itsestäsi</b><br>
             <br>
@@ -60,7 +60,7 @@
             Pidä hauskaa<br>
             <br>
             <br>
-            <b>Liika opiskelu tekee aivoistasi<br>
+            <h2><b>Liika opiskelu tekee aivoistasi<br>
             pahaa guacamolea!</b></h2><br>
             <br>
         </div>
