--- a/second.html
+++ b/second.html
@@ -34,7 +34,7 @@
 </nav>
 
 <section>
-<div class="article">
+<div class="article2">
 	<h2 style="text-align:center;">Kryptovaluuttojen kursseja 24h ajalta</h2>
 	
 		<div class="nomics">
