--- a/third.html
+++ b/third.html
@@ -53,7 +53,7 @@
             Osta dippiä<br>
             Riko sääntöjä<br>
             <br>
-            <h2><b>Pidä huolta itsestäsi</b></h2>></b><br>
+            <h2><b>Pidä huolta itsestäsi</b></h2></b><br>
             <br>
             <h2>Syö hyvin</h2><br>
             Nuku paljon<br>
