--- a/index.html
+++ b/index.html
@@ -14,42 +14,109 @@
 </header>
 
 <nav>
-	<div class="nav">
+	<div class="navi">
 		<a HREF="index.html">Etusivu</a>
 		<a HREF="second.html">Kryptot</a>
 		<a HREF="third.html">Yleistä</a>
 		<a HREF="http://www.google.com/" target="_blank">Google</a>
 		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
 	</div>
-</nav>
+</nav>	
 
-<nav>
-	<div class="nav2">
+<div class="kolumnikontti">
+	<div class="menyy">
+		Purkkaa<br>
 		<a HREF="index.html">Etusivu</a><br>
 		<a HREF="second.html">Kryptot</a><br>
 		<a HREF="third.html">Yleistä</a><br>
 		<a HREF="http://www.google.com/" target="_blank">Google</a>
 		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
 	</div>
-</nav>
-
 
 <section>
-	<div class="article">
-      		<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4"></video>
+	<div class="kolumni1">
+		<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4"></video>
 		
 			<p style="text-align:center;">Katso video äänet päällä</p>
 			<h2 style="text-align:center;">Pakollinen varoitus</h2>
 			<br>
       		
-			<div id="warning">
+			<div class="warning">
         		VAROITUS<br>
         		Sivustolla ei ole taloudellisia neuvoja!<br>
 				Sijoitat omalla vastuulla
         	</div>
-		<br>
-	</div>	
+			<br>
+
+		</div>
+
+</div>
 </section>
+
+
+<br>
+<br>
+<div class="kolumnikontti">
+
+	<div class="menyy">
+	  <h2>Column 1</h2>
+	  <p>Hello World</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+
+	</div>
+	<div class="kolumni1-2" style="background:yellow">
+	  <h2>Column 2</h2>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	  <p>Hello World!</p>
+	</div>
+  
+	<div class="kolumni2-2" style="background:orange">
+	  <h2>Column 3</h2>
+	  <p>Some other text..</p>
+	  <p>Some other text..</p>
+	  <p>Some other text..</p>
+	  <p>Some other text..</p>
+	  <p>Some other text..</p>
+	  <p>Some other text..</p>
+	  <p>Some other text..</p>
+	  <p>Some other text..</p>
+	  <p>Some other text..</p>
+	  <p>Some other text..</p>
+	  <p>Some other text..</p>
+	  <p>Some other text..</p>
+	  <p>Some other text..</p>
+	  <p>Some other text..</p>
+	  <p>Some other text..</p>
+	  <p>Some other text..</p>
+	</div>
+</div>
+  
+
 <footer>
 	<div class="footer">
 		(c) Joakim 2021
