--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
 		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
 	</div>
 
-<section>
+
+
 	<div class="kolumni1">
-		<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4"></video>
+		<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4">
+		
+		</video>
 		
 			<p style="text-align:center;">Katso video äänet päällä</p>
 			<h2 style="text-align:center;">Pakollinen varoitus</h2>
@@ -48,10 +51,10 @@
         	</div>
 			<br>
 
-		</div>
+	</div>
 
 </div>
-</section>
+
 
 
 <br>
