--- a/second.html
+++ b/second.html
@@ -2,8 +2,7 @@
 <html lang="fi">
 	<head>
     	<link rel="stylesheet" href="css.css">
-  		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+  		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   			<title>Kryptokyttääjä</title>
   	</head>
 <body>      	
@@ -13,62 +12,60 @@
 	</div>
 </header>
 
-<nav>
-	<div class="nav">
-		<a HREF="index.html">Etusivu</a>
+<div class="navi">
+	<nav>
+	<a HREF="index.html">Etusivu</a>
 		<a HREF="second.html">Kryptot</a>
 		<a HREF="third.html">Yleistä</a>
 		<a HREF="http://www.google.com/" target="_blank">Google</a>
 		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
-	</div>
-</nav>
+	</nav>
+</div>
 
-<nav>
-	<div class="nav3">
+<div class="kolumnikontti">
+	
+	<div class="menyy">
+		<nav>
 		<a HREF="index.html">Etusivu</a><br>
 		<a HREF="second.html">Kryptot</a><br>
 		<a HREF="third.html">Yleistä</a><br>
 		<a HREF="http://www.google.com/" target="_blank">Google</a>
 		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
+		</nav>
+	</div>	
+	
+	<div class="kolumni1">
+		<section>
+			<h2 style="text-align:center;">Kryptovaluuttojen kursseja 24h ajalta</h2>
+	
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR">
+					<script src="https://widget.nomics.com/embed.js"></script>
+				</div>
+			</div>
+		
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Etherium" data-base="ETH" data-quote="EUR">
+					<script src="https://widget.nomics.com/embed.js"></script>
+				</div>
+			</div>
+		
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Binance Coin" data-base="BNB" data-quote="EUR">
+					<script src="https://widget.nomics.com/embed.js"></script>
+				</div>
+			</div>
+		
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Solana" data-base="SOL" data-quote="EUR">
+					<script src="https://widget.nomics.com/embed.js"></script>
+				</div>
+			</div>
+			
+		</section>
+		<br>
 	</div>
-</nav>
-
-<section>
-<div class="article2">
-	<h2 style="text-align:center;">Kryptovaluuttojen kursseja 24h ajalta</h2>
-	
-		<div class="nomics">
-			<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR">
-
-				<script src="https://widget.nomics.com/embed.js"></script>
-	
-			</div>
-		</div>
-		<div class="nomics">
-			<div class="nomics-ticker-widget" data-name="Etherium" data-base="ETH" data-quote="EUR">
-
-				<script src="https://widget.nomics.com/embed.js"></script>
-	
-			</div>
-		</div>
-		<div class="nomics">
-			<div class="nomics-ticker-widget" data-name="Binance Coin" data-base="BNB" data-quote="EUR">
-
-				<script src="https://widget.nomics.com/embed.js"></script>
-	
-			</div>
-		</div>
-		<div class="nomics">
-			<div class="nomics-ticker-widget" data-name="Solana" data-base="SOL" data-quote="EUR">
-
-				<script src="https://widget.nomics.com/embed.js"></script>
-	
-			</div>
-		</div>
-	<br>
 </div>
-</section>
-
 
 <footer>
 	<div class="footer">
