--- a/index.html
+++ b/index.html
@@ -24,21 +24,22 @@
 
 <div class="kolumnikontti">
 	
-	<div class="menyy">
+	<div class="menyy" style="position:fixed; left:0;">
 		<nav>
 		<a HREF="index.html">Etusivu</a><br>
 		<a HREF="second.html">Kryptot</a><br>
 		<a HREF="third.html">Yleistä</a><br>
-		<a HREF="http://www.google.com/" target="_blank">Google</a>
-		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
+		<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a><br>
+		<a HREF="http://www.binance.com/" target="_blank">Binance</a><br>
 		</nav>
-	</div>	
+		<img style="padding-top:10vh;" src="/bitcoin-logo.png" alt="bitcoin-logo" width=200>
+	</div>
 	
 	<div class="kolumni1">
 		<section>
-			<p style="text-align:center;">Katso video äänet päällä</p>
 				<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4">
 				</video>
+				<h2 style="text-align:center;">Katso video äänet päällä</p>
 				<h2 style="text-align:center;">Pakollinen varoitus</h2>
 				<br>	
 				
@@ -50,8 +51,6 @@
 				<br>
 		</section>			
 	</div>
-	
-
 </div>
 	
 <footer>
