--- a/second.html
+++ b/second.html
@@ -14,29 +14,30 @@
 
 <div class="navi">
 	<nav>
-	<a HREF="index.html">Etusivu</a>
+		<a HREF="index.html">Etusivu</a>
 		<a HREF="second.html">Kryptot</a>
 		<a HREF="third.html">Yleistä</a>
-		<a HREF="http://www.google.com/" target="_blank">Google</a>
-		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
+		<a HREF="http://www.coingecko.com" target="_blank">CoinGecko</a>
+		<a HREF="http://www.binance.com/" target="_blank">Binance</a>
 	</nav>
 </div>
 
 <div class="kolumnikontti">
-	
-	<div class="menyy">
+
+	<div class="menyy" style="position:fixed; left:0;">
 		<nav>
 		<a HREF="index.html">Etusivu</a><br>
 		<a HREF="second.html">Kryptot</a><br>
 		<a HREF="third.html">Yleistä</a><br>
-		<a HREF="http://www.google.com/" target="_blank">Google</a>
-		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
+		<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a><br>
+		<a HREF="http://www.binance.com/" target="_blank">Binance</a><br>
+		<img style="padding-top:10vh;" src="/bitcoin-logo.png" alt="bitcoin-logo" width=200>
 		</nav>
 	</div>	
 	
 	<div class="kolumni1">
 		<section>
-			<h2 style="text-align:center;">Kryptovaluuttojen kursseja 24h ajalta</h2>
+			<h2 style="text-align:center; color:black;">???</h2>
 	
 			<div class="nomics">
 				<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR">
@@ -49,19 +50,47 @@
 					<script src="https://widget.nomics.com/embed.js"></script>
 				</div>
 			</div>
-		
-			<div class="nomics">
-				<div class="nomics-ticker-widget" data-name="Binance Coin" data-base="BNB" data-quote="EUR">
-					<script src="https://widget.nomics.com/embed.js"></script>
-				</div>
-			</div>
-		
+
 			<div class="nomics">
 				<div class="nomics-ticker-widget" data-name="Solana" data-base="SOL" data-quote="EUR">
 					<script src="https://widget.nomics.com/embed.js"></script>
 				</div>
 			</div>
-			
+
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Polkadot" data-base="DOT" data-quote="EUR">
+					<script src="https://widget.nomics.com/embed.js"></script>
+				</div>
+			</div>
+		
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Terra" data-base="LUNA" data-quote="EUR">
+					<script src="https://widget.nomics.com/embed.js"></script>
+				</div>
+			</div>
+
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Polygon" data-base="MATIC" data-quote="EUR">
+					<script src="https://widget.nomics.com/embed.js"></script>
+				</div>
+			</div>
+
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Enjin" data-base="ENJ" data-quote="EUR">
+					<script src="https://widget.nomics.com/embed.js"></script>
+				</div>
+			</div>
+
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Raptoreum" data-base="RTM" data-quote="EUR">
+					<script src="https://widget.nomics.com/embed.js"></script>
+				</div>
+			</div>
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Vabble" data-base="VAB" data-quote="EUR">
+					<script src="https://widget.nomics.com/embed.js"></script>
+				</div>
+			</div>
 		</section>
 		<br>
 	</div>
