--- a/third.html
+++ b/third.html
@@ -12,53 +12,55 @@
 	</div>
 </header>
 
-<nav>
-	<div class="navi">
-		<a HREF="index.html">Etusivu</a>
+<div class="navi">
+	<nav>
+	    <a HREF="index.html">Etusivu</a>
 		<a HREF="second.html">Kryptot</a>
 		<a HREF="third.html">Yleistä</a>
-		<a HREF="http://www.google.com/" target="_blank">Google</a>
-		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
-	</div>
-</nav>
+		<a HREF="http://www.coingecko.com" target="_blank">CoinGecko</a>
+		<a HREF="http://www.binance.com/" target="_blank">Binance</a>
+	</nav>
+</div>
 
 <div class="kolumnikontti">
 
-	<div class="menyy">
-		<a HREF="index.html">Etusivu</a>
-		<a HREF="second.html">Kryptot</a>
-		<a HREF="third.html">Yleistä</a>
-		<a HREF="http://www.google.com/" target="_blank">Google</a>
-		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
+	<div class="menyy" style="position:fixed; left:0;">
+		<nav>
+		<a HREF="index.html">Etusivu</a><br>
+		<a HREF="second.html">Kryptot</a><br>
+		<a HREF="third.html">Yleistä</a><br>
+		<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a><br>
+		<a HREF="http://www.binance.com/" target="_blank">Binance</a><br>
+        <img style="padding-top:10vh;" src="/bitcoin-logo.png" alt="bitcoin-logo" width=200>
+		</nav>
 	</div>
 
-	<div class="kolumni1-2" style="background:yellow">
+	<div class="kolumni1-2">
         <h2>Mikä on kryptovaluutta</h2>
-        <p>Kryptovaluutta on kryptografiaan perustuva digitaalinen virtuaalivaluutta. Kryptovaluuttoja on nykyisin yli 5000 kappaletta, ja uusia syntyy koko ajan[1]. Niistä tunnetuin on vuonna 2008 syntynyt Bitcoin.[2] Bitcoinin lisäksi on olemassa useita satoja erilaisia kryptovaluuttoja, joita yleensä kutsutaan vaihtoehtovaluutoiksi (”altcoins”). Niillä saattaa olla erilaisia ominaisuuksia ja niiden käyttötarkoitus voi olla määritelty.</p>
+        <p>Kryptovaluutta on kryptografiaan perustuva digitaalinen virtuaalivaluutta. Kryptovaluuttoja on nykyisin yli 5000 kappaletta, ja uusia syntyy koko ajan. Niistä tunnetuin on vuonna 2008 syntynyt Bitcoin. Bitcoinin lisäksi on olemassa useita satoja erilaisia kryptovaluuttoja, joita yleensä kutsutaan vaihtoehtovaluutoiksi (”altcoins”). Niillä saattaa olla erilaisia ominaisuuksia ja niiden käyttötarkoitus voi olla määritelty.</p>
         <p>Nykyisin myös pankit hyödyntävät kryptovaluuttoja. Tunnetuin esimerkki on Ripple-yhtiön luoma kryptovaluutta XRP, jota voidaan hyödyntää pankkien likviditeettiongelmissa. Myös monet valtiot suunnittelevat omaa kryptovaluuttaansa. Maailman ensimmäinen valtiollinen kryptovaluutta on Venezuelan Petro. Ruotsi on tutkinut myös vuosia mahdollista eKruunun käyttöönottoa. Suomen naapurimaista myös Viro ja Venäjä ovat suunnitelleet kansallisten kryptovaluuttojen käyttöönottoa.</p>
-        <p>Kryptovaluuttojen arvo määräytyy kysynnän ja tarjonnan mukaan kryptovaluuttamarkkinoilla, johon suosion lisäksi vaikuttavat kyseisen valuutan enimmäismäärä, kierrossa oleva valuuttamäärä ja louhinnan kustannukset, jotka vaihtelevat eri kryptovaluuttojen kesken. 5305:n eri kryptovaluutan yhteenlaskettu markkina-arvo oli 25. toukokuuta 2021 noin 1650 miljardia yhdysvaltain dollaria, josta Bitcoinin osuus oli noin 43,6 % ja Ethereumin osuus noin 18,2 %.[3]</p>
+        <p>Kryptovaluuttojen arvo määräytyy kysynnän ja tarjonnan mukaan kryptovaluuttamarkkinoilla, johon suosion lisäksi vaikuttavat kyseisen valuutan enimmäismäärä, kierrossa oleva valuuttamäärä ja louhinnan kustannukset, jotka vaihtelevat eri kryptovaluuttojen kesken. 5305:n eri kryptovaluutan yhteenlaskettu markkina-arvo oli 25. toukokuuta 2021 noin 1650 miljardia yhdysvaltain dollaria, josta Bitcoinin osuus oli noin 43,6 % ja Ethereumin osuus noin 18,2 %.</p>
         <p>Vuonna 2019 The Wall Street Journal uutisoi, että sosiaalisen median palvelu Facebook kehittää omaa kryptovaluuttaansa.</p>
 	</div>
   
-	<div class="kolumni2-2" style="background:orange">
-        <h2><b>Muista säännöt</b></h2>
-        <br>
-        <h2>Älä sijoita mitä et voi menettää</h2><br>
-        Osta dippiä<br>
-        Riko sääntöjä<br>
-        <br>
-        <h2><b>Pidä huolta itsestäsi</b></h2><br>
-        <br>
-        <h2>Syö hyvin</h2><br>
-        Nuku paljon<br>
-        Pidä hauskaa<br>
-        <br>
-        <br>
-        <h2><b>Liika opiskelu tekee aivoistasi<br>
-        pahaa guacamolea!</b></h2><br>
+	<div class="kolumni2-2">
+        <section>
+            <h2>Muista säännöt</h2>
+            <h2>Älä sijoita mitä et voi menettää</h2>
+            <h2>Osta dippiä</h2>
+            <h2>Riko sääntöjä</h2>
+            <h2>Pidä huolta itsestäsi</h2>
+            <h2>Syö hyvin</h2>
+            <h2>Nuku paljon</h2>
+            <h2>Pidä hauskaa</h2>
+            <h2>Liika opiskelu tekee aivoistasi</h2>
+            <h2>pahaa guacamolea!</h2>
+            <h2>If you cant be good, be careful</h2>
+            <h2>Life is short, if you dont once in a while stop and look around, you could miss it!</h2>
+        </section>
 	</div>
 </div>
-</section>
+
 
 
 <footer>
