--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="fi">
 	<head>
     	<link rel="stylesheet" href="css.css">
-  		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+  		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
   			<title>Kryptokyttääjä</title>
   	</head>
 <body>      	
