--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<section>
 				<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4">
 				</video>
-				<h2 style="text-align:center;">Katso video äänet päällä</p>
+				<h2 style="text-align:center;">Katso video äänet päällä</h2>
 				<h2 style="text-align:center;">Pakollinen varoitus</h2>
 				<br>	
 				
