--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>      	
 <header>	
 	<div class="header">
-		<h1>Kryptokyttääjä</h1>
+		<img src=/bull.png alt="lambo bull.png" width=200 align=left padding=0>
+		Kryptokyttääjä
 	</div>
 </header>
 
@@ -33,7 +34,7 @@
 		<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a><br>
 		<a HREF="http://www.binance.com/" target="_blank">Binance</a><br>
 		</nav>
-		<img style="padding-top:10vh;" src="/bitcoin-logo.png" alt="bitcoin-logo" width=200>
+		<img style="padding-top:6vh;" src="/bitcoin-logo.png" alt="bitcoin-logo" width=200>
 	</div>
 	
 	<div class="kolumni1">
