--- a/second.html
+++ b/second.html
@@ -9,7 +9,7 @@
 <body>      	
 <header>	
 	<div class="header">
-		<h1>Kryptokyttääjä</h1>
+		<img style="padding-top:6vh;" src=/bull.png alt="lambo bull.png" width=200 align=left> <p style="font-size:100px;">Kryptokyttääjä</p>
 	</div>
 </header>
 
