--- a/second.html
+++ b/second.html
@@ -9,7 +9,8 @@
 <body>      	
 <header>	
 	<div class="header">
-		<img style="padding-top:6vh;" src=/bull.png alt="lambo bull.png" width=200 align=left> <p style="font-size:100px;">Kryptokyttääjä</p>
+		<img src=/bull.png alt="lambo bull.png" width=200 align=left padding=0>
+		Kryptokyttääjä
 	</div>
 </header>
 
