--- a/third.html
+++ b/third.html
@@ -9,9 +9,11 @@
 <body>      	
 <header>	
 	<div class="header">
-		<img style="padding-top:6vh;" src=/bull.png alt="lambo bull.png" width=150 align=left> <p style="font-size:100px;">Kryptokyttääjä</p>
+		<img src=/bull.png alt="lambo bull.png" width=200 align=left padding=0>
+		Kryptokyttääjä
 	</div>
 </header>
+
 
 <div class="navi">
 	<nav>
