--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 				<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4">
 				</video>
 				<h2 style="text-align:center;">Katso video äänet päällä</h2>
-				<h2 style="text-align:center;">Pakollinen varoitus</h2>
+				<h2 style="text-align:center;">Pakollinen varoitus:</h2>
 				<br>	
 				
 				<div class="warning">
-        			VAROITUS<br>
-        			Sivustolla ei ole taloudellisia neuvoja!<br>
-					Sijoitat omalla vastuulla
+        			<p id=text><b>VAROITUS<br>
+        			Sivustolla <u>EI</u> ole<br>taloudellisia neuvoja!<br>
+					Sijoitat omalla vastuulla</b></p>
         		</div>
 				<br>
 		</section>			
