--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>      	
 <header>	
 	<div class="header">
-		<img src=/bull.png alt="lambo bull.png" width=200 align=left padding=0>
+		<img src=/bull.png alt="lambo bull.png" width=200 align=left>
 		Kryptokyttääjä
 	</div>
 </header>
