--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>      	
 <header>	
 	<div class="header">
-		<img src=/bull.png alt="lambo bull.png" width=200 align=left>
-		Kryptokyttääjä
+		<img class="left-image" src=/bull.png alt="lambo bull.png" width=200>
+		<div style="text-align:center">Kryptokyttääjä</div>
 	</div>
 </header>
 
