--- a/third.html
+++ b/third.html
@@ -6,14 +6,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
   			<title>Kryptokyttääjä</title>
   	</head>
-<body>      	
-<header>	
-	<div class="header">
-		<img src=/bull.png alt="lambo bull.png" width=200 align=left>
-		Kryptokyttääjä
-	</div>
-</header>
-
+<body>      		
+    <header>	
+        <div class="header">
+            <img class="left-image" src=/bull.png alt="lambo bull.png" width=200>
+            <div style="text-align:center">Kryptokyttääjä</div>
+        </div>
+    </header>
 
 <div class="navi">
 	<nav>
