--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 	<a HREF="index.html">Etusivu</a>
 		<a HREF="second.html">Kryptot</a>
 		<a HREF="third.html">Yleistä</a>
-		<a HREF="http://www.google.com/" target="_blank">Google</a>
-		<a HREF="http://www.laurea.fi/" target="_blank">Laurea</a>
+		<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a>
+		<a HREF="http://www.binance.com/" target="_blank">Binance</a>
+		<a HREF="https://discord.gg/g26mnepFuc" target="_blank">Liity Discordiin</a>
 	</nav>
 </div>
 
