--- a/second.html
+++ b/second.html
@@ -16,16 +16,17 @@
 
 <div class="navi">
 	<nav>
-		<a HREF="index.html">Etusivu</a>
+	<a HREF="index.html">Etusivu</a>
 		<a HREF="second.html">Kryptot</a>
 		<a HREF="third.html">Yleistä</a>
-		<a HREF="http://www.coingecko.com" target="_blank">CoinGecko</a>
+		<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a>
 		<a HREF="http://www.binance.com/" target="_blank">Binance</a>
+		<a HREF="https://discord.gg/g26mnepFuc" target="_blank">Liity Discordiin</a>
 	</nav>
 </div>
 
 <div class="kolumnikontti">
-
+	
 	<div class="menyy" style="position:fixed; left:0;">
 		<nav>
 		<a HREF="index.html">Etusivu</a><br>
@@ -33,9 +34,9 @@
 		<a HREF="third.html">Yleistä</a><br>
 		<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a><br>
 		<a HREF="http://www.binance.com/" target="_blank">Binance</a><br>
-		<img style="padding-top:10vh;" src="/bitcoin-logo.png" alt="bitcoin-logo" width=200>
 		</nav>
-	</div>	
+		<img style="padding-top:6vh;" src="/bitcoin-logo.png" alt="bitcoin-logo" width=200>
+	</div>
 	
 	<div class="kolumni1">
 		<section>
