--- a/third.html
+++ b/third.html
@@ -39,7 +39,7 @@
         </div>
 
 	<div class="kolumni1-2">
-        <h2>Mikä on kryptovaluutta</h2>
+        <h2>Mikä on kryptovaluutta?</h2>
         <p>Kryptovaluutta on kryptografiaan perustuva digitaalinen virtuaalivaluutta. Kryptovaluuttoja on nykyisin yli 5000 kappaletta, ja uusia syntyy koko ajan. Niistä tunnetuin on vuonna 2008 syntynyt Bitcoin. Bitcoinin lisäksi on olemassa useita satoja erilaisia kryptovaluuttoja, joita yleensä kutsutaan vaihtoehtovaluutoiksi (”altcoins”). Niillä saattaa olla erilaisia ominaisuuksia ja niiden käyttötarkoitus voi olla määritelty.</p>
         <p>Nykyisin myös pankit hyödyntävät kryptovaluuttoja. Tunnetuin esimerkki on Ripple-yhtiön luoma kryptovaluutta XRP, jota voidaan hyödyntää pankkien likviditeettiongelmissa. Myös monet valtiot suunnittelevat omaa kryptovaluuttaansa. Maailman ensimmäinen valtiollinen kryptovaluutta on Venezuelan Petro. Ruotsi on tutkinut myös vuosia mahdollista eKruunun käyttöönottoa. Suomen naapurimaista myös Viro ja Venäjä ovat suunnitelleet kansallisten kryptovaluuttojen käyttöönottoa.</p>
         <p>Kryptovaluuttojen arvo määräytyy kysynnän ja tarjonnan mukaan kryptovaluuttamarkkinoilla, johon suosion lisäksi vaikuttavat kyseisen valuutan enimmäismäärä, kierrossa oleva valuuttamäärä ja louhinnan kustannukset, jotka vaihtelevat eri kryptovaluuttojen kesken. 5305:n eri kryptovaluutan yhteenlaskettu markkina-arvo oli 25. toukokuuta 2021 noin 1650 miljardia yhdysvaltain dollaria, josta Bitcoinin osuus oli noin 43,6 % ja Ethereumin osuus noin 18,2 %.</p>
