--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<a HREF="third.html">Yleistä</a>
 		<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a>
 		<a HREF="http://www.binance.com/" target="_blank">Binance</a>
-		<a HREF="https://discord.gg/g26mnepFuc" target="_blank">Liity Discordiin</a>
+		<a HREF="https://kryptokyttaaja.boards.net/" target="_blank">Keskustelu</a>
 	</nav>
 </div>
 
