--- a/second.html
+++ b/second.html
@@ -2,6 +2,22 @@
 <html lang="fi">
 	<head>
     	<link rel="stylesheet" href="css.css">
+		<link rel="apple-touch-icon" sizes="60x60" href="/ico/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="/ico/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="/ico/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="/ico/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="/ico/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="/ico/apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="/ico/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/ico/apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192"  href="/ico/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/ico/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="/ico/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
+		<link rel="manifest" href="/manifest.json">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-TileImage" content="/ico/ms-icon-144x144.png">
+		<meta name="theme-color" content="#ffffff">
   		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
   			<title>Kryptokyttääjä</title>
@@ -9,8 +25,8 @@
 <body>      	
 <header>	
 	<div class="header">
-			<img class="left-image" src=/bull.png alt="lambo bull.png" width=200>
-			<div style="text-align:center">Kryptokyttääjä</div>
+		<img class="left-image" src=/bull.png alt="lambo bull.png" width=200>
+		<div style="text-align:center">Kryptokyttääjä</div>
 	</div>
 </header>
 
@@ -21,7 +37,7 @@
 		<a HREF="third.html">Yleistä</a>
 		<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a>
 		<a HREF="http://www.binance.com/" target="_blank">Binance</a>
-		<a HREF="https://discord.gg/g26mnepFuc" target="_blank">Liity Discordiin</a>
+		<a HREF="https://kryptokyttaaja.boards.net/" target="_blank">Keskustelu</a>
 	</nav>
 </div>
 
@@ -42,6 +58,33 @@
 		<section>
 			<h2 style="text-align:center; color:black;">???</h2>
 	
+<!-- TradingView Widget BEGIN -->
+			<div class="tradingview-widget-container">
+			<div id="tradingview_7bf3e"></div>
+			<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/BTCEUR/?exchange=COINBASE" rel="noopener" target="_blank"><span class="blue-text">BTCEUR Chart</span></a> by TradingView</div>
+			<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+			<script type="text/javascript">
+			new TradingView.widget(
+				{
+					"width": 600,
+					"height": 400,
+					"symbol": "COINBASE:BTCEUR",
+					"interval": "30",
+					"timezone": "Europe/Helsinki",
+					"theme": "dark",
+					"style": "1",
+					"locale": "en",
+					"toolbar_bg": "#f1f3f6",
+					"enable_publishing": false,
+					"allow_symbol_change": true,
+					"container_id": "tradingview_7bf3e"
+  				}
+				);
+			</script>
+  			</div>
+<!-- TradingView Widget END -->
+
+
 			<div class="nomics">
 				<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR">
 					<script src="https://widget.nomics.com/embed.js"></script>
