--- a/second-old.html
+++ b/second-old.html
@@ -66,7 +66,7 @@
 			<script type="text/javascript">
 			new TradingView.widget(
 				{
-					"width": 1000,
+					"width": 600,
 					"height": 400,
 					"symbol": "COINBASE:BTCEUR",
 					"interval": "30",
@@ -92,7 +92,7 @@
 			<script type="text/javascript">
 			new TradingView.widget(
 			{
-					"width": 1000,
+					"width": 600,
 					"height": 400,
 					"symbol": "COINBASE:ETHEUR",
 					"interval": "30",
@@ -109,137 +109,50 @@
 			</script>
 	  		</div>
 <!-- TradingView Widget END -->
-			<br>
-<!-- TradingView Widget BEGIN -->
-			<div class="tradingview-widget-container">
-			<div id="tradingview_01831"></div>
-			<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/SOLEUR/?exchange=EIGHTCAP" rel="noopener" target="_blank"><span class="blue-text">SOLEUR Chart</span></a> by TradingView</div>
-			<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-			<script type="text/javascript">
-			new TradingView.widget(
-			{
-					"width": 1000,
-					"height": 400,
-					"symbol": "EIGHTCAP:SOLEUR",
-					"interval": "30",
-					"timezone": "Europe/Helsinki",
-					"theme": "dark",
-					"style": "1",
-					"locale": "en",
-					"toolbar_bg": "#f1f3f6",
-					"enable_publishing": false,
-					"allow_symbol_change": true,
-					"container_id": "tradingview_01831"
-  			}
-			);
-			</script>
-  			</div>
-<!-- TradingView Widget END -->
-			<br>
-<!-- TradingView Widget BEGIN -->
-			<div class="tradingview-widget-container">
-			<div id="tradingview_e96c0"></div>
-			<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/DOTEUR/?exchange=BINANCE" rel="noopener" target="_blank"><span class="blue-text">DOTEUR Chart</span></a> by TradingView</div>
-			<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-			<script type="text/javascript">
-			new TradingView.widget(
-			{
-					"width": 1000,
-					"height": 400,
-					"symbol": "BINANCE:DOTEUR",
-					"interval": "30",
-					"timezone": "Europe/Helsinki",
-					"theme": "dark",
-					"style": "1",
-					"locale": "en",
-					"toolbar_bg": "#f1f3f6",
-					"enable_publishing": false,
-					"allow_symbol_change": true,
-					"container_id": "tradingview_e96c0"
-  			}
-			);
-			</script>
-  			</div>
-<!-- TradingView Widget END -->
-		  	<br>
-<!-- TradingView Widget BEGIN -->
-			<div class="tradingview-widget-container">
-			<div id="tradingview_8cf4d"></div>
-			<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/LUNAEUR/?exchange=BINANCE" rel="noopener" target="_blank"><span class="blue-text">LUNAEUR Chart</span></a> by TradingView</div>
-			<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-			<script type="text/javascript">
-			new TradingView.widget(
-			{
-					"width": 1000,
-					"height": 400,
-					"symbol": "BINANCE:LUNAEUR",
-					"interval": "30",
-					"timezone": "Europe/Helsinki",
-					"theme": "dark",
-					"style": "1",
-					"locale": "en",
-					"toolbar_bg": "#f1f3f6",
-					"enable_publishing": false,
-					"allow_symbol_change": true,
-					"container_id": "tradingview_8cf4d"
-  			}
-			);
-			</script>
-  			</div>
-<!-- TradingView Widget END -->
-			<br>
-<!-- TradingView Widget BEGIN -->
-			<div class="tradingview-widget-container">
-			<div id="tradingview_a5f66"></div>
-			<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/MATICEUR/?exchange=BINANCE" rel="noopener" target="_blank"><span class="blue-text">MATICEUR Chart</span></a> by TradingView</div>
-			<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-			<script type="text/javascript">
-			new TradingView.widget(
-			{
-					"width": 1000,
-					"height": 400,
-					"symbol": "BINANCE:MATICEUR",
-					"interval": "30",
-					"timezone": "Europe/Helsinki",
-					"theme": "dark",
-					"style": "1",
-					"locale": "en",
-					"toolbar_bg": "#f1f3f6",
-					"enable_publishing": false,
-					"allow_symbol_change": true,
-					"container_id": "tradingview_a5f66"
- 			}
-			);
-			</script>
-  			</div>
-<!-- TradingView Widget END -->
-			<br>
-<!-- TradingView Widget BEGIN -->
-			<div class="tradingview-widget-container">
-			<div id="tradingview_e0b54"></div>
-			<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/ENJEUR/?exchange=BINANCE" rel="noopener" target="_blank"><span class="blue-text">ENJEUR Chart</span></a> by TradingView</div>
-			<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-			<script type="text/javascript">
-			new TradingView.widget(
-			{
-					"width": 1000,
-					"height": 400,
-					"symbol": "BINANCE:ENJEUR",
-					"interval": "30",
-					"timezone": "Europe/Helsinki",
-					"theme": "dark",
-					"style": "1",
-					"locale": "en",
-					"toolbar_bg": "#f1f3f6",
-					"enable_publishing": false,
-					"allow_symbol_change": true,
-					"container_id": "tradingview_e0b54"
-  			}
-			);
-			</script>
-  			</div>
-<!-- TradingView Widget END -->
-			<br>
+
+
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Bitcoin" data-base="BTC" data-quote="EUR">
+					<script src="https://widget.nomics.com/embed.js"></script>
+				</div>
+			</div>
+		
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Etherium" data-base="ETH" data-quote="EUR">
+					<script src="https://widget.nomics.com/embed.js"></script>
+				</div>
+			</div>
+
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Solana" data-base="SOL" data-quote="EUR">
+					<script src="https://widget.nomics.com/embed.js"></script>
+				</div>
+			</div>
+
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Polkadot" data-base="DOT" data-quote="EUR">
+					<script src="https://widget.nomics.com/embed.js"></script>
+				</div>
+			</div>
+		
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Terra" data-base="LUNA" data-quote="EUR">
+					<script src="https://widget.nomics.com/embed.js"></script>
+				</div>
+			</div>
+
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Polygon" data-base="MATIC" data-quote="EUR">
+					<script src="https://widget.nomics.com/embed.js"></script>
+				</div>
+			</div>
+
+			<div class="nomics">
+				<div class="nomics-ticker-widget" data-name="Enjin" data-base="ENJ" data-quote="EUR">
+					<script src="https://widget.nomics.com/embed.js"></script>
+				</div>
+			</div>
+
 			<div class="nomics">
 				<div class="nomics-ticker-widget" data-name="Raptoreum" data-base="RTM" data-quote="EUR">
 					<script src="https://widget.nomics.com/embed.js"></script>
