--- a/bootstrap.html
+++ b/bootstrap.html
@@ -33,6 +33,8 @@
                 2 of 2
               </div>
             </div>
+        </div>
+        <div class="container">
             <div class="row">
               <div class="col">
                 1 of 3
@@ -45,7 +47,7 @@
               </div>
             </div>
           </div>
-
+        </div>
     	
 </body>
 
