--- a/bootstrap.html
+++ b/bootstrap.html
@@ -48,6 +48,34 @@
             </div>
           </div>
         </div>
+
+        <h1>Hello, world!</h1>
+
+        <div class="container.container-fluid">
+            <div class="row">
+              <div class="col">
+                1 of 2
+              </div>
+              <div class="col">
+                2 of 2
+              </div>
+            </div>
+        </div>
+        <div class="container.container-fluid">
+            <div class="row">
+              <div class="col">
+                1 of 3
+              </div>
+              <div class="col">
+                2 of 3
+              </div>
+              <div class="col">
+                3 of 3
+              </div>
+            </div>
+          </div>
+        </div>
+        
     	
 </body>
 
