--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
 	</div>
 </header>
 
+<h1>Testi</h1>
 
-<div class="container">
+
 	<div class="row">
-		<div class="col-sm-6">My first column</div>
-		<div class="col-sm-6">My second column</div>
+		<div class="col-sm-3">My first column</div>
+		<div class="col-sm-9">My second column</div>
 	</div>
-</div>
 
-<div class="container">
+
 	<div class="row">
-		<div class="col-sm-4">My first column</div>
+		<div class="col-sm-3">My first column</div>
 		<div class="col-sm-4">My second column</div>
 		<div class="col-sm-4">My third column</div>
 	</div>
-</div>	
+	
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/ jquery . min. js"></script>
