--- a/bootstrap.html
+++ b/bootstrap.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="/bootstrap.css"
     <!-- MY CSS-->
     <!-- <link rel="stylesheet" href="css.css"> -->
     <title>Hello, world!</title>
@@ -22,55 +22,78 @@
 </head>
 
 <body>
-        <h1>Hello, world!</h1>
+    <h1>Hello, world!</h1>
 
-        <div class="container">
-            <div class="row">
-              <div class="col">
+    <div class="container.container">
+        <div class="row">
+            <div class="col">
+                <div class="color1">
                 1 of 2
-              </div>
-              <div class="col">
+                </div>
+            </div>
+            <div class="col">
+                <div class="color2">
                 2 of 2
-              </div>
+                </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row">
-              <div class="col">
+    </div>
+    <div class="container.container">
+        <div class="row">
+          <div class="col">
+                <div class="color1">
                 1 of 3
-              </div>
-              <div class="col">
+                </div>
+          </div>
+          <div class="col">
+                <div class="color2">
                 2 of 3
-              </div>
-              <div class="col">
+                </div>
+            </div>
+          <div class="col">
+                <div class="color3">
                 3 of 3
-              </div>
+                </div>
             </div>
           </div>
         </div>
+      </div>
+    </div>
+
 
         <h1>Hello, world!</h1>
 
         <div class="container.container-fluid">
             <div class="row">
-              <div class="col">
-                1 of 2
-              </div>
-              <div class="col">
-                2 of 2
-              </div>
+                <div class="col">
+                    <div class="color1">
+                    1 of 2
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="color2">
+                    2 of 2
+                    </div>
+                </div>
             </div>
         </div>
         <div class="container.container-fluid">
             <div class="row">
               <div class="col">
-                1 of 3
+                    <div class="color1">
+                    1 of 3
+                    </div>
               </div>
               <div class="col">
-                2 of 3
-              </div>
+                    <div class="color2">
+                    2 of 3
+                    </div>
+                </div>
               <div class="col">
-                3 of 3
+                    <div class="color3">
+                    3 of 3
+                    </div>
+                </div>
               </div>
             </div>
           </div>
