--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/ jquery . min. js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="js/bootstrap.min.js"></script>
+	
+
 		<!-- My old faithful stylesheet -->
     	<link rel="stylesheet" href="css.css">
 
@@ -41,69 +47,52 @@
 	</div>
 </header>
 
-<h1>Testi</h1>
-
-
 	<div class="row">
-		<div class="col-sm-3">My first column</div>
-		<div class="col-sm-9">My second column</div>
+		<div class="col-sm-12" style="text-align: center;">
+			<nav>
+				<a HREF="index.html">Etusivu</a>
+				<a HREF="second.html">Kryptot</a>
+				<a HREF="third.html">Yleistä</a>
+				<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a>
+				<a HREF="http://www.binance.com/" target="_blank">Binance</a>
+				<a HREF="https://kryptokyttaaja.boards.net/" target="_blank">Keskustelu</a>
+			</nav>
+		</div>
+
+		<div class="col-sm-3">
+			<div class="menyy" style="position:fixed; left:0;">
+				<nav>
+				<a HREF="index.html">Etusivu</a><br>
+				<a HREF="second.html">Kryptot</a><br>
+				<a HREF="third.html">Yleistä</a><br>
+				<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a><br>
+				<a HREF="http://www.binance.com/" target="_blank">Binance</a><br>
+				</nav>
+				<img style="padding-top:6vh;" src="/bitcoin-logo.png" alt="bitcoin-logo" width=200>
+			</div>
+						</nav>
+		</div>
+
+		<div class="col-sm-9">
+			<div class="kolumni1">
+				<section>
+						<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4">
+						</video>
+						<h2 style="text-align:center;">Katso video äänet päällä</h2>
+						<h2 style="text-align:center;">Pakollinen varoitus:</h2>
+						<br>	
+						
+						<div class="warning">
+							<p id=text><b>VAROITUS<br>
+							Sivustolla <u>EI</u> ole<br>taloudellisia neuvoja!<br>
+							Sijoitat omalla vastuulla</b></p>
+						</div>
+						<br>
+				</section>			
+			</div>
+		</div>
 	</div>
 
-
-	<div class="row">
-		<div class="col-sm-3">My first column</div>
-		<div class="col-sm-4">My second column</div>
-		<div class="col-sm-4">My third column</div>
-	</div>
-	
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/ jquery . min. js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
-
-<div class="navi">
-	<nav>
-	<a HREF="index.html">Etusivu</a>
-		<a HREF="second.html">Kryptot</a>
-		<a HREF="third.html">Yleistä</a>
-		<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a>
-		<a HREF="http://www.binance.com/" target="_blank">Binance</a>
-		<a HREF="https://kryptokyttaaja.boards.net/" target="_blank">Keskustelu</a>
-	</nav>
-</div>
-
-<div class="kolumnikontti">
-	
-	<div class="menyy" style="position:fixed; left:0;">
-		<nav>
-		<a HREF="index.html">Etusivu</a><br>
-		<a HREF="second.html">Kryptot</a><br>
-		<a HREF="third.html">Yleistä</a><br>
-		<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a><br>
-		<a HREF="http://www.binance.com/" target="_blank">Binance</a><br>
-		</nav>
-		<img style="padding-top:6vh;" src="/bitcoin-logo.png" alt="bitcoin-logo" width=200>
-	</div>
-	
-	<div class="kolumni1">
-		<section>
-				<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4">
-				</video>
-				<h2 style="text-align:center;">Katso video äänet päällä</h2>
-				<h2 style="text-align:center;">Pakollinen varoitus:</h2>
-				<br>	
-				
-				<div class="warning">
-        			<p id=text><b>VAROITUS<br>
-        			Sivustolla <u>EI</u> ole<br>taloudellisia neuvoja!<br>
-					Sijoitat omalla vastuulla</b></p>
-        		</div>
-				<br>
-		</section>			
-	</div>
-</div>
-	
 <footer>
 	<div class="footer">
 		(c) Joakim 2021
