--- a/second.html
+++ b/second.html
@@ -1,7 +1,23 @@
 <!DOCTYPE HTML>
 <html lang="fi">
 	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/ jquery . min. js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="js/bootstrap.min.js"></script>
+	
+
+		<!-- My old faithful stylesheet -->
     	<link rel="stylesheet" href="css.css">
+
+		<!-- Old shit for icons to show up on browsers-->
 		<link rel="apple-touch-icon" sizes="60x60" href="/ico/apple-icon-60x60.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="/ico/apple-icon-72x72.png">
 		<link rel="apple-touch-icon" sizes="76x76" href="/ico/apple-icon-76x76.png">
@@ -18,45 +34,49 @@
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="msapplication-TileImage" content="/ico/ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
-  		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<!-- My crappy code begins from here -->
   			<title>Kryptokyttääjä</title>
   	</head>
-<body>      	
+
+<body>
 <header>	
 	<div class="header">
-		<img class="left-image" src=/bull.png alt="lambo bull.png" width=200>
+		<img class="left-image" src="/bull.png" alt="lambo bull.png" width=200>
 		<div style="text-align:center">Kryptokyttääjä</div>
 	</div>
 </header>
 
-<div class="navi">
-	<nav>
-	<a HREF="index.html">Etusivu</a>
-		<a HREF="second.html">Kryptot</a>
-		<a HREF="third.html">Yleistä</a>
-		<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a>
-		<a HREF="http://www.binance.com/" target="_blank">Binance</a>
-		<a HREF="https://kryptokyttaaja.boards.net/" target="_blank">Keskustelu</a>
-	</nav>
-</div>
+	<div class="row">
+		<div class="col-sm-12" style="text-align: center;">
+			<nav>
+				<a HREF="index.html">Etusivu</a>
+				<a HREF="second.html">Kryptot</a>
+				<a HREF="third.html">Yleistä</a>
+				<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a>
+				<a HREF="http://www.binance.com/" target="_blank">Binance</a>
+				<a HREF="https://kryptokyttaaja.boards.net/" target="_blank">Keskustelu</a>
+			</nav>
+		</div>
 
-<div class="kolumnikontti">
-	
-	<div class="menyy" style="position:fixed; left:0;">
-		<nav>
-		<a HREF="index.html">Etusivu</a><br>
-		<a HREF="second.html">Kryptot</a><br>
-		<a HREF="third.html">Yleistä</a><br>
-		<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a><br>
-		<a HREF="http://www.binance.com/" target="_blank">Binance</a><br>
-		</nav>
-		<img style="padding-top:6vh;" src="/bitcoin-logo.png" alt="bitcoin-logo" width=200>
-	</div>
-	
-	<div class="kolumni1">
-		<section>
-			<h2 style="text-align:center; color:black;">???</h2>
+		<div class="col-sm-3">
+			<div class="menyy" style="position:fixed; left:0;">
+				<nav>
+				<a HREF="index.html">Etusivu</a><br>
+				<a HREF="second.html">Kryptot</a><br>
+				<a HREF="third.html">Yleistä</a><br>
+				<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a><br>
+				<a HREF="http://www.binance.com/" target="_blank">Binance</a><br>
+				</nav>
+				<img style="padding-top:6vh;" src="/bitcoin-logo.png" alt="bitcoin-logo" width=200>
+			</div>
+						</nav>
+		</div>
+
+		<div class="col-sm-9">
+			<div class="kolumni1">
+				<section>
+				<h2 style="text-align:center; color:black;">???</h2>
 	
 <!-- TradingView Widget BEGIN -->
 			<div class="tradingview-widget-container">
