--- a/third.html
+++ b/third.html
@@ -1,7 +1,23 @@
 <!DOCTYPE HTML>
 <html lang="fi">
 	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/ jquery . min. js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="js/bootstrap.min.js"></script>
+	
+
+		<!-- My old faithful stylesheet -->
     	<link rel="stylesheet" href="css.css">
+
+		<!-- Old shit for icons to show up on browsers-->
 		<link rel="apple-touch-icon" sizes="60x60" href="/ico/apple-icon-60x60.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="/ico/apple-icon-72x72.png">
 		<link rel="apple-touch-icon" sizes="76x76" href="/ico/apple-icon-76x76.png">
@@ -18,66 +34,84 @@
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="msapplication-TileImage" content="/ico/ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
-  		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<!-- My crappy code begins from here -->
   			<title>Kryptokyttääjä</title>
   	</head>
-<body>      	
+
+<body>
 <header>	
 	<div class="header">
-		<img class="left-image" src=/bull.png alt="lambo bull.png" width=200>
+		<img class="left-image" src="/bull.png" alt="lambo bull.png" width=200>
 		<div style="text-align:center">Kryptokyttääjä</div>
 	</div>
 </header>
 
-<div class="navi">
-	<nav>
-	<a HREF="index.html">Etusivu</a>
-		<a HREF="second.html">Kryptot</a>
-		<a HREF="third.html">Yleistä</a>
-		<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a>
-		<a HREF="http://www.binance.com/" target="_blank">Binance</a>
-		<a HREF="https://kryptokyttaaja.boards.net/" target="_blank">Keskustelu</a>
-	</nav>
-</div>
-    
-    <div class="kolumnikontti">
-        
-        <div class="menyy" style="position:fixed; left:0;">
-            <nav>
-            <a HREF="index.html">Etusivu</a><br>
-            <a HREF="second.html">Kryptot</a><br>
-            <a HREF="third.html">Yleistä</a><br>
-            <a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a><br>
-            <a HREF="http://www.binance.com/" target="_blank">Binance</a><br>
-            </nav>
-            <img style="padding-top:6vh;" src="/bitcoin-logo.png" alt="bitcoin-logo" width=200>
-        </div>
+	<div class="row">
+		<div class="col-sm-12" style="text-align: center;">
+			<nav>
+				<a HREF="index.html">Etusivu</a>
+				<a HREF="second.html">Kryptot</a>
+				<a HREF="third.html">Yleistä</a>
+				<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a>
+				<a HREF="http://www.binance.com/" target="_blank">Binance</a>
+				<a HREF="https://kryptokyttaaja.boards.net/" target="_blank">Keskustelu</a>
+			</nav>
+		</div>
 
-	<div class="kolumni1-2">
+		<div class="col-sm-3">
+			<div class="menyy" style="position:fixed; left:0;">
+				<nav>
+				<a HREF="index.html">Etusivu</a><br>
+				<a HREF="second.html">Kryptot</a><br>
+				<a HREF="third.html">Yleistä</a><br>
+				<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a><br>
+				<a HREF="http://www.binance.com/" target="_blank">Binance</a><br>
+				</nav>
+				<img style="padding-top:6vh;" src="/bitcoin-logo.png" alt="bitcoin-logo" width=200>
+			</div>
+						</nav>
+		</div>
+
+		<div class="col-sm-4">
+        <div class="kolumni1-2">
         <h2>Mikä on kryptovaluutta?</h2>
         <p>Kryptovaluutta on kryptografiaan perustuva digitaalinen virtuaalivaluutta. Kryptovaluuttoja on nykyisin yli 5000 kappaletta, ja uusia syntyy koko ajan. Niistä tunnetuin on vuonna 2008 syntynyt Bitcoin. Bitcoinin lisäksi on olemassa useita satoja erilaisia kryptovaluuttoja, joita yleensä kutsutaan vaihtoehtovaluutoiksi (”altcoins”). Niillä saattaa olla erilaisia ominaisuuksia ja niiden käyttötarkoitus voi olla määritelty.</p>
         <p>Nykyisin myös pankit hyödyntävät kryptovaluuttoja. Tunnetuin esimerkki on Ripple-yhtiön luoma kryptovaluutta XRP, jota voidaan hyödyntää pankkien likviditeettiongelmissa. Myös monet valtiot suunnittelevat omaa kryptovaluuttaansa. Maailman ensimmäinen valtiollinen kryptovaluutta on Venezuelan Petro. Ruotsi on tutkinut myös vuosia mahdollista eKruunun käyttöönottoa. Suomen naapurimaista myös Viro ja Venäjä ovat suunnitelleet kansallisten kryptovaluuttojen käyttöönottoa.</p>
         <p>Kryptovaluuttojen arvo määräytyy kysynnän ja tarjonnan mukaan kryptovaluuttamarkkinoilla, johon suosion lisäksi vaikuttavat kyseisen valuutan enimmäismäärä, kierrossa oleva valuuttamäärä ja louhinnan kustannukset, jotka vaihtelevat eri kryptovaluuttojen kesken. 5305:n eri kryptovaluutan yhteenlaskettu markkina-arvo oli 25. toukokuuta 2021 noin 1650 miljardia yhdysvaltain dollaria, josta Bitcoinin osuus oli noin 43,6 % ja Ethereumin osuus noin 18,2 %.</p>
         <p>Vuonna 2019 The Wall Street Journal uutisoi, että sosiaalisen median palvelu Facebook kehittää omaa kryptovaluuttaansa.</p>
-	</div>
+        </div>
+    </div>
   
-	<div class="kolumni2-2">
+        <div class="col-sm-4">
+	    <div class="kolumni1-2">
         <section>
             <h2>Muista säännöt</h2>
+            <br>
             <h2>Älä sijoita mitä et voi menettää</h2>
+            <br>
             <h2>Osta dippiä</h2>
+            <br>
             <h2>Riko sääntöjä</h2>
+            <br>
             <h2>Pidä huolta itsestäsi</h2>
+            <br>
             <h2>Syö hyvin</h2>
+            <br>
             <h2>Nuku paljon</h2>
+            <br>
             <h2>Pidä hauskaa</h2>
+            <br>
             <h2>Liika opiskelu tekee aivoistasi</h2>
+            <br>
             <h2>pahaa guacamolea!</h2>
+            <br>
             <h2>If you cant be good, be careful</h2>
+            <br>
             <h2>Life is short, if you dont once in a while stop and look around, you could miss it!</h2>
         </section>
 	</div>
+    </div>
 </div>
 
 
