--- a/third.html
+++ b/third.html
@@ -47,6 +47,7 @@
 	</div>
 </header>
 
+<div class="container.fluid">
 	<div class="row">
 		<div class="col-sm-12" style="text-align: center;">
 			<nav>
@@ -113,7 +114,7 @@
 	</div>
     </div>
 </div>
-
+</div>
 
 
 <footer>
